# DeepScientist

./: AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
docs/: ARTIFACT_EXAMPLES.md  CHECKLIST.md  CONFIG_AND_DISCOVERY.md  CORE_ARCHITECTURE.md  CORE_BLUEPRINT.md  IMPLEMENTATION_PLAN.md  MEMORY_AND_MCP.md  PLUGINS_AND_MARKETPLACE.md  PROMPTS_AND_CONNECTORS.md  PROTOCOL_SCHEMAS.md  README.md  REGISTRIES.md  SRC_IMPLEMENTATION.md  TEAM_LIFECYCLE.md  UI_AND_WEB.md  WORKFLOW_AND_SKILLS.md
docs/en/: 01_SETTINGS_REFERENCE.md  99_ACKNOWLEDGEMENTS.md
docs/zh/: 01_SETTINGS_REFERENCE.md  99_ACKNOWLEDGEMENTS.md
src/deepscientist/: __init__.py
src/deepscientist/config/: models.py  service.py
src/deepscientist/daemon/: app.py
src/deepscientist/prompts/: builder.py
src/deepscientist/quest/: service.py
src/deepscientist/skills/: installer.py
src/prompts/: system.md
src/skills/analysis-campaign/: SKILL.md
src/skills/idea/: SKILL.md
src/skills/write/: SKILL.md
src/tui/: package-lock.json  package.json
src/ui/: package-lock.json  package.json
src/ui/src/: types.ts
src/ui/src/components/landing/: HeroNav.tsx  UpdateReminderDialog.tsx
src/ui/src/components/projects/: ProjectsAppBar.tsx
src/ui/src/components/settings/: SettingsPage.tsx  settingsFormCatalog.ts
src/ui/src/components/system-update/: SystemUpdateButton.tsx  (+1 more)
src/ui/src/lib/: i18n.tsx
tests/: launcher_uv.test.cjs  test_api_contract_surface.py  test_config_testing.py  test_daemon_api.py  test_init_and_quest.py  test_prompt_builder.py  test_skill_contracts.py
(+1 files in other folders)
